# advent-of-code

./: .gitcommit  README.md
.archive/day-01/: lib.ts
.archive/day-02/: lib.ts
.archive/day-04/: lib.ts  puzzle.test.ts
day-01/node-js/: index.js  package.json
day-02/node-js/: package.json  test.js
node-js/: .justfile  README.md  bun.lockb  esbuild.config.mjs  package.json  tsconfig.json
node-js/day-01/: lib.ts  puzzle.test.ts  puzzle.ts
node-js/day-02/: index.js  lib.js  lib.ts  puzzle.test.ts  puzzle.ts
node-js/solutions/: day-01.test.ts  day-02.test.ts  day-03.test.ts  day-04.test.ts  day-05.test.ts  day-05.ts
rust/: Cargo.toml  bacon.toml  rustfmt.toml
rust/day-01/: Cargo.toml
rust/day-01/src/: main.rs
rust/day-02/: Cargo.toml
rust/day-02/src/: main.rs
rust/day-03/: Cargo.toml
rust/day-03/src/: main.rs
rust/day-05/: Cargo.toml
rust/day-05/src/: main.rs
rust/day-06/: Cargo.toml
rust/day-06/src/: main.rs
