[workspace]
resolver = "2"
members = ["day-*"]
default-members = ["day-*"]

[workspace.package]
version = "20.23.0"
edition = "2021"
description = "A Rust workspace for completing the Advent of Code puzzles."
authors = ["Connor Deckers <dronnoc@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.dependencies]
anyhow = "1.0.75"
once_cell = "1.18.0"
regex = "1.10.2"
